5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1885_1639.log
== TEST (2019-07-09 11:18:28) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(n, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:19:11) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:19:44) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:19:55) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:20:10) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:15) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:36) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
	print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:26:49) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(v, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:27) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:27:39) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in arange(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:54) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:11) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:31) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in arange(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:45) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:55) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = s[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:19) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] =e[i]
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:42) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] =e[i]
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:25) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] =e[i]
		i = i + 1
	print(e[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:34:39) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] =e[i]
		i = i + 1
		print(e[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:36:09) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:36:28) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:36:43) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:34) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = i
print(e[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:51) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = i
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:02) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = v[i] + 1		
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:31) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = v[i] + 1		
		i = i + 1
	print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:42) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = v[i] + 1		
		i = i + 1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:13) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
s = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e = v[i] + 1		
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:58) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e = v[i] + 1		
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:14) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = v[i] + 1		
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:42:41) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		e[i] = v[i] 		
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:43:56) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = v[i] 		
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:44:04) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = v[i] 		
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:44:23) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e = v[i] 		
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:45:06) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = v[i] 		
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:45:39) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = v[i] 
	i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:47:08) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)
print(e)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
	e[i] = v[i]
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:47:33) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)
print(e)

i = 0
e = 0
for i in range(size(e)):
	if ((v[i]%2)==0):
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:48:36) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e[i] = v[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:48:53) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e[i] =e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:16) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:38) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e[i] = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:49:56) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:11) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e = e + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:25) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e[i] = e + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:50) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e = e[i] + 1
		i = i + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:51:40) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		e = e + 1
		i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:51:52) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		r = e + 1
		i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:14) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		r[i] = e + 1
		i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:51) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		r[i] = v[i] + 1
		i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:53:04) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		r[i] = v[i] 
		i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:53:17) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
		r[i] = v[i] 
	i = i + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:53:32) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
r = zeros(d, dtype=int)
for i in range(size(v)):
	if ((v[i] % 2) == 0):
		d = d + 1
		i = i + 1
print(d)

i = 0
e = 0
for i in range(size(v)):
	if ((v[i]%2)==0):
	r[i] = v[i] 
		i = i + 1
print(r)
-- ERROR:
File "XXXX", line 16
    r[i] = v[i] 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
